[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Connor Glosser <glosser1@gmail.com>"]
edition = "2021"
default-run = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "utils"
path = "src/utils/lib.rs"

[[bin]]
name = "2022"
path = "src/2022/main.rs"

[[bin]]
name = "2021"
path = "src/2021/main.rs"

[[bin]]
name = "2020"
path = "src/2020/main.rs"

[[bin]]
name = "2015"
path = "src/2015/main.rs"

[dependencies]
clap = "2.33"
itertools = "0.10"
lazy_static = "1.4"
md5 = "0.7"
regex = "1.4.2"