[package]
name = "advent"
version = "0.1.0"
authors = ["Connor Glosser <glosser1@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib/lib.rs"

[dependencies]
clap = "2.33"
glam = "0.24.2"
itertools = "0.10"
lazy_static = "1.4"
md5 = "0.7"
regex = "1.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sscanf = "0.4.1"
thiserror = "1.0.50"

[features]
verification = []
